# mipt-ded-zemax

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh
headers/: widget.hpp
include/cum/: dr4_ifc.hpp  geomprim_ifc.hpp  manager.hpp  plugin.hpp  version.hpp
include/cum/ifc/: dr4.hpp  pp.hpp
include/dr4/: event.hpp  keycodes.hpp  mouse_buttons.hpp  mousecodes.hpp  texture.hpp  window.hpp
include/dr4/math/: color.hpp  rect.hpp  vec2.hpp
include/hui/: container.hpp  data.hpp  event.hpp  geomprim.hpp  hui_except.hpp  state.hpp  ui.hpp  widget.hpp
include/misc/: dr4_ifc.hpp
include/pp/: canvas.hpp  shape.hpp  tool.hpp
notes/: plugins  todo
source/cum/: manager.cpp
source/hui/: container.cpp  event.cpp  state.cpp  ui.cpp  widget.cpp
src/cum/: manager.cpp
src/hui/: widget.cpp
